@@ -17,6 +17,34 @@ testing {
         val test by getting(JvmTestSuite::class) {
             useJUnitJupiter("5.12.1")
         }
+
+        val integrationTest by registering(JvmTestSuite::class) {
+            useJUnitJupiter()
+            dependencies {
+                implementation(project())
+                implementation(libs.testcontainers)
+                implementation(libs.testcontainers.junit5)
+                implementation("com.google.truth:truth:1.4.5")
+            }
+            targets {
+                all {
+                    testTask.configure {
+                        dependsOn("nativeCompile")
+                        jvmArgs("--enable-native-access=ALL-UNNAMED")
+                        environment("DOCKER_HOST", "unix:///var/run/docker.sock")
+                        environment("DOCKER_API_VERSION", "1.41")
+                        systemProperty(
+                            "fcgi.binary.path",
+                            layout.buildDirectory
+                                .file("native/nativeCompile/test-jex.fcgi")
+                                .get()
+                                .asFile.absolutePath,
+                        )
+                        systemProperty("docker.dir", rootProject.file("docker").absolutePath)
+                    }
+                }
+            }
+        }
     }
 }
 
